swiftbrowser/static/css/style.css
@charset "UTF-8";
/*
 * jQuery File Upload Plugin CSS Example 8.8.2
 * https://github.com/blueimp/jQuery-File-Upload
 *
 * Copyright 2013, Sebastian Tschan
 * https://blueimp.net
 *
 * Licensed under the MIT license:
 * http://www.opensource.org/licenses/MIT
 */



body {padding-bottom: 60px; }
.center, th.center, td.center {text-align: center;}
.navbar {margin-bottom:10px !important;}
form {margin-bottom: 0;}
td a.block {display: block;}
.breadcrumb a {font-weight: bold;}
.breadcrumb {padding:0px !important;font-size:20px;background-color:transparent !important;}
.breadcrumb>li+li:before {padding: 0px 0px 0px 5px;color: #ccc;content: "/\00a0";}
code {white-space: normal !important;}
.head-logo {width:170px;}
.account-btns {text-align:right;}
.log-out {border-radius:0 !important;padding:10px 15px !important;}
.username{padding:0px 10px;}
.action-btns {text-align:right;}
.row {margin-left: -20px;}
.login-form-box {
	width:100%;background-color:rgba(0,0,0,0.65);padding: 50px 200px 10px;position:relative;top:40%;
}
.form-control {margin-bottom:5px;}
.olrctext {width:400px;padding-bottom:15px;}
.login-form {
	background: url("../img/olrc-logo-lg.png") no-repeat fixed;
	background-size: 400px;
	background-position:194px 0px;
	background-color:#666666; height:100%;
	position:absolute;
	width:100%;
	height:100%;
}
.login-form .btn {
	width:100%;
}
.login-alert {
	color:#ffffff;
}
.modal-dialog {
	width:90%;
}
.upload-table-td1 {
	width:100px;
}
.progress {margin-bottom:10px;}
.progress-extended {margin-bottom:10px;}
.fileupload-buttonbar .btn {margin-bottom:0px !important;}
@media (max-width: 992px) {
	.head-logo {
		margin-left:15px;
	}
}
@media (max-width: 768px) {
.action-btns {text-align:left;}	
.login-form-box {
	padding: 50px 50px 50px;position:relative;top:40%;
}
.login-form {
	background: url("../img/olrc-logo-lg.png") no-repeat fixed;
	background-size: 400px;
	background-position:45px 0px;
	background-color:#666666; height:100%;
	position:absolute;
	width:100%;
	height:100%;
}
.form-control {margin-bottom:5px;}
}

@media (max-width: 480px) {
	body {padding-left:0px; padding-bottom:0px;}
	.olrctext {width:100%;padding-bottom:15px;}
	.login-form-box {
		padding: 20px 40px 20px;position:relative;top:20%;
	}
}

